# cisc_601_final_project

./: .gitignore  README.md
benchmark_results/: benchmark_consolidation.ipynb  cpp_benchmark.txt  python_benchmark.txt  rust_benchmark.txt  simpson_1_3.xlsx  simpson_3_8.xlsx  trapezoidal.xlsx
benchmark_results/rust_benchmark_1/Function 1 f32/1/report/: index.html
benchmark_results/rust_benchmark_1/Function 1 f32/10/report/: index.html
benchmark_results/rust_benchmark_1/Function 1 f32/100/report/: index.html
benchmark_results/rust_benchmark_1/Function 1 f32/2/report/: index.html
benchmark_results/rust_benchmark_1/Function 1 f32/20/report/: index.html
benchmark_results/rust_benchmark_1/Function 1 f32/report/: index.html
benchmark_results/rust_benchmark_1/Function 1 f64/report/: index.html
benchmark_results/rust_benchmark_1/Function 2 f32/report/: index.html
benchmark_results/rust_benchmark_1/Function 2 f64/report/: index.html
benchmark_results/rust_benchmark_1/Function 3 f32/report/: index.html
benchmark_results/rust_benchmark_1/Function 3 f64/report/: index.html
benchmark_results/rust_benchmark_1/report/: index.html
benchmark_results/rust_benchmark_2/f32/report/: index.html
benchmark_results/rust_benchmark_2/f64/report/: index.html
benchmark_results/rust_benchmark_2/report/: index.html
c/: CMakeLists.txt
c/include/numerical_integration/: lib.hpp
c/src/: main.cpp
integration_rust/: Cargo.toml
integration_rust/src/: lib.rs  main.rs
numerical_integration_cpp/: CMakeLists.txt
numerical_integration_cpp/include/numerical_integration/: lib.hpp
numerical_integration_cpp/src/: main.cpp
numerical_integration_python/: integration.py
numerical_integration_rust/: Cargo.toml
numerical_integration_rust/benches/: numerical_integration_benchmark.rs
numerical_integration_rust/src/: lib.rs  main.rs
python/: integration.py
(+2469 files in other folders)
