[package]
name = "integration_rust"
version = "0.1.0"
authors = ["Shuyang Sun <sunbuffett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.12"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
