[package]
name = "integration_rust"
version = "0.1.0"
authors = ["Shuyang Sun <sunbuffett@gmail.com>"]
edition = "2018"

[dependencies]
num-traits = "0.2.17"
criterion = "0.5.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 16
rpath = false

[[bench]]
name = "numerical_integration_benchmark"
harness = false
